# Arcana-Macth

./: .replit  app.py  game_logic.py  generate_card_sound.js  generate_sound.js  generate_sounds.js  generate_sounds.mjs  generate_sounds.py  generate_sounds.sh  generate_web_audio_sounds.js  main.py  package-lock.json  package.json  pyproject.toml  replit.nix  resize_logo.py  sound_effects.py
static/css/: style.css
static/js/: game.js
templates/: error.html  game.html  index.html  landing.html
