[project]
name = "repl-nix-shinryokucardgame"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-cors>=5.0.0",
    "flask-session>=0.8.0",
    "werkzeug>=3.1.3",
]
